# bi-map

./: .gitmodules  CHANGES  CMakeLists.txt  DataPrep.md  Installation.md  ProjectHome.md
doc/: bi-map_user_guide.tex
include/: RUtils.h  debug.h
include/cemm/bimap/: BIMAPResultsSerialize.h  BIMAPSampler.h  BIMAPWalk.h  BasicTypedefs.h  BlocksScoring.h  CellSignalLLHMaximizer.h  CellsLLHEval.h  ChessboardBiclustering.h  ChessboardBiclusteringCrossover.h  ChessboardBiclusteringFit.h  ChessboardBiclusteringGibbsHelper.h  ChessboardBiclusteringGibbsSampler.h  ChessboardBiclusteringLLHEval.h  ChessboardBiclusteringMetrics.h  ChessboardBiclusteringParams.h  ChessboardBiclusteringPriorEval.h  ChessboardBiclusteringStructureLLHEval.h  ChessboardBiclusteringsIndexing.h  ChessboardBiclusteringsPDFEval.h  CoOccurenceDistanceMatrix.h  CoOccurrenceGraph.h  DataSignalNoiseCache.h  IndexedPartitionsCollection.h  OPAAssay.h  OPAData.h  OPADataImportCSV.h  OPAObject.h  ObjectSet.h  ObjectsPartition.h  PartitionDataExtractor.h  PartitionStatistics.h  PrecomputedData.h  ProbeSet.h  ProbesPartition.h  Signals.h  misc_utils.h
samples/: analysis.R  bimap_config.ini  run_bimap_tip49.sh
samples/tip49/: ensembl_info.csv  exp_design.txt  measurements.txt  proteins.txt
scripts/R/: BIMAP.R  BIMAP_cytoscape.R  BIMAP_extract.R  BIMAP_gen.R  BIMAP_graphml.R  BIMAP_math.R  BIMAP_plot.R  BIMAP_xlsx.R  cytoscape_support.R  dataframe_cytoscape.R  graphml_support.R  misc_utils.R  ms_data_exttools.R  ms_data_utils.R  peptides_data.R  test_BIMAP.R
scripts/xslt/: yfilize.xslt
src/: BIMAP-sampler.cpp  BIMAPResultsSerialize.cpp  BIMAPResultsSerialize.h  BIMAPSampler.cpp  BIMAPSampler.h  BIMAPWalk.cpp  BIMAPWalk.h  BasicTypedefs.h  BlocksScoring.cpp  CMakeLists.txt  CellSignalLLHMaximizer.cpp  CellSignalLLHMaximizer.h  CellsLLHEval.cpp  CellsLLHEval.h  ChessboardBiclustering.cpp  ChessboardBiclustering.h  ChessboardBiclusteringCrossover.cpp  ChessboardBiclusteringCrossover.h  ChessboardBiclusteringFit.cpp  ChessboardBiclusteringFit.h  ChessboardBiclusteringFitInternal.h  ChessboardBiclusteringGibbsHelper.cpp  ChessboardBiclusteringGibbsHelper.h  ChessboardBiclusteringGibbsSampler.cpp  ChessboardBiclusteringGibbsSampler.h  ChessboardBiclusteringLLHEval.cpp  ChessboardBiclusteringLLHEval.h  ChessboardBiclusteringMetrics.h  ChessboardBiclusteringParams.h  ChessboardBiclusteringPriorEval.cpp  ChessboardBiclusteringPriorEval.h  ChessboardBiclusteringStructureLLHEval.cpp  ChessboardBiclusteringStructureLLHEval.h  ChessboardBiclusteringsIndexing.cpp  ChessboardBiclusteringsIndexing.h  ChessboardBiclusteringsPDFEval.cpp  ChessboardBiclusteringsPDFEval.h  CoOccurenceDistanceMatrix.h  CoOccurrenceGraph.cpp  CoOccurrenceGraph.h  (+38 more)
src/eesampler/: EnergyDisk.cpp  EnergyDisk.h  ExecutionMonitor.h  ITurbineConnection.h  Particle.h  ParticleCache.cpp  ParticleCache.h  Turbine.cpp  Turbine.h  TurbineCascadeUnit.cpp  TurbineCascadeUnit.h
src/math/: DistributionCache.h  Distributions.cpp  Distributions.h  GenericDiscreteDistribution.h  LagrangianPoisson.h  Permutation.h  PitmanYorProcess.cpp  PitmanYorProcess.h  gsl_exception.h  logmath.cpp  logmath.h
src/mcmc/: GibbsSample.h  MetropolisHastingsStep.h  PartitionCrossover.h  SamlpingTransform.h  SingleElementMembershipStep.h  SplitMergeStep.h  TransitionDistributions.h
src/mpisampler/: BIMAP-sampler-mpi.cpp  BIMAP-sampler-mpi.h  CMakeLists.txt  MPIUnitCommunicator.h  MPIUtils.h
src/rcpp/: CMakeLists.txt  ExtraStats.cpp  OptimalPartition.cpp  PartitionMatching.cpp  RBIMAP.cpp
test/: BIMAPTest.cpp  BIMAPWalkTest.cpp  CMakeLists.txt  ChessboardBiclusteringEvalTest.cpp  ChessboardBiclusteringTest.cpp  ClusteringTest.cpp  DistributionsTest.cpp  EESampler2D.h  EESamplerTest.cpp  MCMCTest.cpp  OPADataTest.cpp  OPADataTest.h  OrderedDistanceMatrixTest.cpp  PitmanYorTest.cpp  SemindexedMap.cpp  TestCommon.h  array2dTest.cpp  main.cpp  symmetric_array2dTest.cpp
test/data/: osadata_1x1.xml  osadata_3x1_2_clusters.xml  osadata_4x2_signal_noise.xml  osadata_4x4_diag.xml  osadata_4x4_triag_lower.xml  test_exp_design.csv  test_measurements.csv  test_proteins.csv
test/mpisampler/: CMakeLists.txt  MPI_EESamplerTest.cpp
